log/build_2021-11-14_21-54-18/client/stderr.log
  File "/home/dave/team/test_ws/install/client/lib/python3.6/site-packages/client/client_node.py", line 37
    rclpy.Parameter.Type.STRING,,
                                ^
SyntaxError: invalid syntax

